--- a/japhy/templates/splash_base.html
+++ b/japhy/templates/splash_base.html
@@ -28,23 +28,17 @@
 			</div>
 		</a>
 		<div id="nav">
-			<!-- <a href='/about'><li class="{% if selectedClass == 'about'%}selected{% endif %}"><img src="../static/images/nav/about.png"></li></a>
-			<a href='/products'><li class="{% if selectedClass == 'products'%}selected{% endif %}"><img src="../static/images/nav/products.png"></li></a>
-			<a href='/gallery'><li class="{% if selectedClass == 'gallery'%}selected{% endif %}"><img src="../static/images/nav/gallery.png"></li></a>
-			<a href='/purchase'><li class="{% if selectedClass == 'purchase'%}selected{% endif %}"><img src="../static/images/nav/purchase.png"></li></a>
-			<a href='/contact'><li class="{% if selectedClass == 'contact'%}selected{% endif %}"><img src="../static/images/nav/contact.png"></li></a> -->
-			<a href='/about'><li class="{% if selectedClass == 'about'%}selected{% endif %}">Our Story</li></a>
+			<a href='/our-story'><li class="{% if selectedClass == 'our-story'%}selected{% endif %}">Our Story</li></a>
 			<a href='/products'><li class="{% if selectedClass == 'products'%}selected{% endif %}">Products</li></a>
 			<a href='/gallery'><li class="{% if selectedClass == 'gallery'%}selected{% endif %}">Gallery</li></a>
 			<a href='/purchase'><li class="{% if selectedClass == 'purchase'%}selected{% endif %}">Purchase</li></a>
-			<a href='/contact'><li class="{% if selectedClass == 'contact'%}selected{% endif %}">Contact Us</li></a>
+			<a href='/contact-us'><li class="{% if selectedClass == 'contact-us'%}selected{% endif %}">Contact Us</li></a>
 		</div>
 	</div>
 	<div class="line-vertical"></div>
 
 	<div id="right">
-		<!-- <div><img class="headline" src="../static/images/nav/{{selectedClass}}.png" alt="{selectedClass}"></div> -->
-		<div class="headline {% if selectedClass == 'gallery' or selectedClass == 'about' %}top-align{% endif %}">{% if selectedClass != 'home' %}{{ selectedClass }}{% endif %}</div>
+		<div class="headline {% if selectedClass == 'gallery' or selectedClass == 'our-story' %}top-align{% endif %}">{% if selectedClass != 'home' %}{{ selectedClass.replace('-', ' ') }}{% endif %}</div>
 		{% block content %}{% endblock %}
 	</div>
 </div>
