--- a/japhy/templates/products.html
+++ b/japhy/templates/products.html
@@ -2,6 +2,21 @@
 
 {% block content %}
 
-<img class="product-gif" src="../static/images/demo.gif">
+<div id="products">
+	<div class="full-width"><img src="../static/images/gallery/img_3.jpg" alt=""></div>
+
+	<div class="full-width">
+		<div class="left-img"><img src="../static/images/gallery/img_33.jpg" alt=""></div>
+		<div class="right-img"><img src="../static/images/gallery/img_34.jpg" alt=""></div>
+	</div>
+
+	<div class="full-width"><img src="../static/images/gallery/img_25.jpg" alt=""></div>
+
+	<div class="full-width"><img src="../static/images/gallery/img_3.jpg" alt=""></div>
+
+	<div class="full-width"><img src="../static/images/product-sketch.jpg" alt=""></div>
+
+	<img class="product-gif" src="../static/images/demo.gif">
+</div>
 
 {% endblock %}
