--- a/japhy/templates/our-story.html
+++ b/japhy/templates/our-story.html
@@ -3,22 +3,7 @@
 {% block content %}
 
 <div id="video">
-	<!-- begin embedded QuickTime file... -->
-	<table border="0" cellpadding="0" align="left">
-	    <!-- begin video window... -->
-	    <tr>
-	    	<td>
-	        	<OBJECT classid='clsid:02BF25D5-8C17-4B23-BC80-D3488ABDDC6B' width="740" height="460" codebase='http://www.apple.com/qtactivex/qtplugin.cab'>
-			        <param name='src' value="../static/images/kickstart.mov">
-			        <param name='autoplay' value="false">
-			        <param name='controller' value="true">
-			        <param name='loop' value="false">
-			        <EMBED src="../static/images/kickstart.mov" width="540" height="303.75" scale="tofit" autoplay="false" controller="true" loop="false" pluginspage='http://www.apple.com/quicktime/download/'></EMBED>
-	        	</OBJECT>
-	        </td>
-	    </tr>
-	    <!-- ...end embedded QuickTime file -->
-	</table>
+	<iframe src="//player.vimeo.com/video/111492003" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 </div>
 <div class="content">
 	<p><em>The Beachnik trunk was born on a surfing road trip.</em></p>
