--- a/japhy/templates/products.html
+++ b/japhy/templates/products.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<div id="products">
+<div id="products" class="mCustomScrollbar">
 	<div class="full-width"><img src="../static/images/gallery/img_3.jpg" alt=""></div>
 
 	<div class="full-width">
