--- a/japhy/templates/purchase.html
+++ b/japhy/templates/purchase.html
@@ -10,7 +10,7 @@
 		<img src="../static/images/product-blue-back.jpg" alt="">
 	</a>
 
-	<div id="kickstarter">Available on Kickstarter starting November 19</div>
+	<div id="kickstarter">Available on Kickstarter at 1159 PST November 18</div>
 </div>
 
 {% endblock %}
