--- a/japhy/templates/splash_base.html
+++ b/japhy/templates/splash_base.html
@@ -17,6 +17,10 @@
 
 	<!-- fontawesome -->
 	<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+
+	<!-- custom scroll bar -->
+	<link rel="stylesheet" href="../static/css/jquery.mCustomScrollbar.css" />
+	<script src="../static/js/jquery.mCustomScrollbar.concat.min.js"></script>
 </head>
 <body>
 
