--- a/japhy/templates/contact-us.html
+++ b/japhy/templates/contact-us.html
@@ -2,13 +2,19 @@
 
 {% block content %}
 
-<ul class="contact">
-	<li><a href="mailto:hans.geiszler@japhysurfco.com"><i class="fa fa-envelope-o"></i> Email</a></li>
-	<li><a target="_blank" href="http://www.facebook.com/japhysurfco"><i class="fa fa-facebook-square"></i> Facebook</a></li>
-	<li><a target="_blank" href="http://www.twitter.com/japhysurfco"><i class="fa fa-twitter-square"></i> Twitter</a></li>
-	<li><a target="_blank" href="http://japhysurfco.tumblr.com/"><i class="fa fa-tumblr-square"></i> Tumblr</a></li>
-	<li><a target="_blank" href="http://www.instagram.com/japhysurfco"><i class="fa fa-instagram"></i> Instagram</a></li>
-</ul>
+<div class="contact">
+	<!-- <div><a href="mailto:hans.geiszler@japhysurfco.com"><i class="fa fa-envelope-o"></i><p> Email</p></a></div>
+	<div><a target="_blank" href="http://www.facebook.com/japhysurfco"><i class="fa fa-facebook-square"></i><p> Facebook</p></a></div>
+	<div><a target="_blank" href="http://www.twitter.com/japhysurfco"><i class="fa fa-twitter-square"></i><p> Twitter</p></a></div>
+	<div><a target="_blank" href="http://japhysurfco.tumblr.com/"><i class="fa fa-tumblr-square"></i><p> Tumblr</p></a></div>
+	<div><a target="_blank" href="http://www.instagram.com/japhysurfco"><i class="fa fa-instagram"></i><p> Instagram</p></a></div> -->
+
+	<a href="mailto:hans.geiszler@japhnysurfco.com" target="_blank"><div><i class="fa fa-envelope-o"></i> Email</div></a>
+	<a href="http://www.facebook.com/japhysurfco" target="_blank"><div><i class="fa fa-facebook-square"></i> Facebook</div></a>
+	<a href="http://www.twitter.com/japhysurfco" target="_blank"><div><i class="fa fa-twitter-square"></i> Twitter</div></a>
+	<a href="http://japhysurfco.tumblr.com" target="_blank"><div><i class="fa fa-tumblr-square"></i> Tumblr</div></a>
+	<a href="http://www.instagram.com/japhysurfco" target="_blank"><div><i class="fa fa-instagram"></i> Instagram</div></a>
+</div>
 
 
 
