--- a/japhy/templates/products.html
+++ b/japhy/templates/products.html
@@ -12,11 +12,9 @@
 
 	<div class="full-width"><img src="../static/images/gallery/img_25.jpg" alt=""></div>
 
-	<div class="full-width"><img src="../static/images/gallery/img_3.jpg" alt=""></div>
-
 	<div class="full-width"><img src="../static/images/product-sketch.jpg" alt=""></div>
 
-	<img class="product-gif" src="../static/images/demo.gif">
+	<iframe class="product-gif" src="//player.vimeo.com/video/111681725" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> <p><a href="http://vimeo.com/111681725"></p>
 </div>
 
 {% endblock %}
