--- a/japhy/templates/purchase.html
+++ b/japhy/templates/purchase.html
@@ -4,11 +4,13 @@
 
 <div id="purchase">
 	<a class="fancybox" rel="group" href="../static/images/product-front.jpg">
-		<img src="../static/images/product-blue-front.jpg" alt="">
+		<img src="../static/images/product-front.jpg" alt="">
 	</a>
 	<a class="fancybox" rel="group" href="../static/images/product-back.jpg">
-		<img src="../static/images/product-blue-back.jpg" alt="">
+		<img src="../static/images/product-back.jpg" alt="">
 	</a>
+
+	<p>Check back here for a link to our Kickstarter page!</p>
 
 	<div id="kickstarter">Available on Kickstarter at 1159 PST November 18</div>
 </div>
