--- a/japhy/static/css/style.css
+++ b/japhy/static/css/style.css
@@ -127,6 +127,12 @@ a {
 #purchase {
 	margin-top: 10%;
 }
+#purchase p {
+	padding-top: 2em;
+	width: 90%;
+	margin: auto;
+	text-align: center;
+}
 #purchase img {
 	display: inline-block;
 	width: 48%;
@@ -201,7 +207,7 @@ i.fa.fa-instagram:hover {
 
 /* Our Story */
 #video {
-	max-width: 90%;
+	max-width: 100%;
 	display: block;
 	margin: auto;
 	padding-top: 3%;
@@ -209,11 +215,12 @@ i.fa.fa-instagram:hover {
 #video iframe {
 	display: block;
 	margin: auto;
+	width: 100%;
+	height: 22em;
 }
 .content {
 	clear: left;
 	padding-top: 3%;
-	padding-left: 3%;
 }
 .content p {
 	font-family: arial;
