--- a/japhy/templates/our-story.html
+++ b/japhy/templates/our-story.html
@@ -8,7 +8,7 @@
 <div class="content">
 	<p><em>The Beachnik trunk was born on a surfing road trip.</em></p>
 
-	<p>After a surfing road trip in the winter of 2013, I decided I was sick of taking off my wet trunks and having no way to conveniently store them. Inevitably, they would end up in the back of my car, dripping all over the rest of my belongings. This trip was the inspiration for the creation of the Beachnik trunk. The built in waterproof stuff-sac allows for a way to easily store your wet trunks after use. Don't let your adventures be soggy.</p>
+	<p>After a surfing road trip in the winter of 2013, I decided I was sick of taking off my wet trunks and having no way to conveniently store them. Inevitably, they would end up in the back of my car, dripping all over the rest of my belongings. This trip was the inspiration for the creation of the Beachnik trunk. The built in waterproof stuff-sac allows you to easily store your wet trunks after use. Don't let your adventures be soggy.</p>
 
 	<p><em>Bring a pair on your next adventure.</em></p>
 </div>
