--- a/japhy/templates/products.html
+++ b/japhy/templates/products.html
@@ -14,7 +14,7 @@
 
 	<div class="full-width"><img src="../static/images/product-sketch.jpg" alt=""></div>
 
-	<iframe class="product-gif" src="//player.vimeo.com/video/111681725" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> <p><a href="http://vimeo.com/111681725"></p>
+	<img class="product-gif" src="../static/images/demo.gif" alt="">
 </div>
 
 {% endblock %}
