--- a/japhy/templates/home.html
+++ b/japhy/templates/home.html
@@ -2,6 +2,14 @@
 
 {% block content %}
 
+<div id="nav-mobile">
+	<a href="/our-story">Our Story</a>
+	<a href="/products">Products</a>
+	<a href="/gallery">Gallery</a>
+	<a href="/purchase">Purchase</a>
+	<a href="/contact-us">Contact Us</a>
+</div>
+
 <div>
 	<img class="cover" src="../static/images/homepage.jpg" alt="">
 </div>
