--- a/japhy/templates/purchase.html
+++ b/japhy/templates/purchase.html
@@ -4,7 +4,7 @@
 
 <div id="purchase">
 
-	<div id="kickstarter">Available on Kickstarter at 1159 PST November 18</div>
+	<div id="kickstarter">Beachnik Trunk available on Kickstarter at 11:59 PST November 18</div>
 
 	<p>Check back here for a link to our Kickstarter page!</p>
 
