--- a/japhy/templates/contact-us.html
+++ b/japhy/templates/contact-us.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 <div class="contact">
-	<a href="mailto:hans.geiszler@japhnysurfco.com"><div><i class="fa fa-envelope-o"></i> Email</div></a>
+	<a href="mailto:hans.geiszler@japhysurfco.com"><div><i class="fa fa-envelope-o"></i> Email</div></a>
 	<a href="http://www.facebook.com/japhysurfco" target="_blank"><div><i class="fa fa-facebook-square"></i> Facebook</div></a>
 	<a href="http://www.twitter.com/japhysurfco" target="_blank"><div><i class="fa fa-twitter-square"></i> Twitter</div></a>
 	<a href="http://japhysurfco.tumblr.com" target="_blank"><div><i class="fa fa-tumblr-square"></i> Tumblr</div></a>
