--- a/japhy/templates/purchase.html
+++ b/japhy/templates/purchase.html
@@ -4,9 +4,7 @@
 
 <div id="purchase">
 
-	<div id="kickstarter">Beachnik Trunk available on Kickstarter at 11:59PM PST November 18</div>
-
-	<p>Check back here for a link to our Kickstarter page!</p>
+	<a target="_blank" href="https://www.kickstarter.com/projects/933096524/the-beachnik-trunk-by-japhy-surf-co"><div id="kickstarter">Find us on Kickstarter</div></a>
 
 </div>
 
